--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/leaflet": "^1.9.21",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@types/leaflet": "^1.9.21",
     "@vitejs/plugin-react": "^5.1.2",
-    "typescript": "^5.9.3",
-    "vite": "^7.3.0",
-    "tailwindcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.23"
+    "tailwindcss": "4.1.18",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0"
   }
 }
