--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "node scripts/copy-libs.js"
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "0.12.15",
@@ -23,6 +24,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.6",
     "tailwindcss": "4.1.18",
     "typescript": "^5.9.3",
